--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
